# apocharmm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  environment.yml  idprop.rst  include_files.cmake  pyproject.toml  pyproject.toml1  run_all_test.sh  setup.py  setup.py1  src_files.cmake
.github/workflows/: wheels.yml
charmm/: 7Z2C.cif  __init__.py  analysis.py  experimental.py  something.py  utils.py
cmake/: FindNetCDF.cmake
docs/: Doxyfile  benchmarks.html  cookbooks.html  index.html  tutorials.html
docs/html/: AtomVelocityKick_8h.html  AtomVelocityKick_8h_source.html  Bonded__struct_8h_source.html  Bspline_8h_source.html  ConstantPressurePostDrift_8h.html  ConstantPressurePostDrift_8h_source.html  ConstantPressurePrepareDrift_8h.html  ConstantPressurePrepareDrift_8h_source.html  CudaBlock_8h_source.html  CudaBondedForce_8h_source.html  CudaContainer_8h_source.html  CudaDirectForce14__util_8h_source.html  CudaDirectForceKernels_8h_source.html  CudaDirectForceTypes_8h_source.html  CudaDirectForce__util_8h_source.html  CudaDomdecRecip_8h_source.html  CudaEnergyVirial_8h_source.html  CudaIntegratorGraph_8h.html  CudaIntegratorGraph_8h_source.html  CudaIntegrator_8h_source.html  CudaLangevinPistonIntegrator_8h_source.html  CudaNeighborListBuild_8h_source.html  CudaNeighborListSort_8h_source.html  CudaNeighborListStruct_8h_source.html  CudaNeighborList_8h_source.html  CudaPMEDirectForce_8h_source.html  CudaPMERecip_8h_source.html  CudaSimulationContext_8h.html  CudaSimulationContext_8h_source.html  CudaTopExcl_8h_source.html  CudaVerletIntegrator_8h_source.html  DomdecRecip_8h_source.html  EnergyVirial_8h_source.html  Engine_8hpp_source.html  Force_8h_source.html  KineticEnergyGraph_8h.html  KineticEnergyGraph_8h_source.html  Matrix3d_8h_source.html  MicroURNG_8hpp_source.html  PressureGroupDrift_8h.html  (+228 more)
docs/source/: conf.py  index.rst  tests.rst  tutorial.rst  unit.rst
examples/: analyze_SAI_ASFE.ipynb  benchmark.py  charmm_paper_benchmark.py  consph_eds_1cvo.py  eds25k.py  eds_tests.ipynb  em.py  equilibratedRestart.res  equilibrator.py  ethane.py  ethaneMethanolDualTopology.py  factorix.py  generateSAIprm.py  jac.py  jiyeon_bilayer.py  langevin_walp.py  mbar100k.py  mbar25k.py  mbar3k.py  methanol_methane_sai.py  nacl.py  p21_bilayer.py  pert100k.py  pert25k.py  pert3k.py  rel.py  relativeFreeEnergy.py  run_SAI_ASFE.py  soohyung.py  submitjobs.py  tests.ipynb  utils.py  vmms.py  walp.py  water5psfs.py  waterBox100k.py  waterbox.py  zack.py
examples/freeenergy/: AlchemicalFMGeneration.py  FreeSolv.py  energies_from_psf.py  pymbar.ipynb
examples/restartGenerators/: argon1000.py
fortran_api/: chcuda.cu  chcuda_mod.F90
fortran_src/: main.F90
include/: AtomVelocityKick.h  BEDSForceManager.h  BEDSSubscriber.h  Bonded_struct.h  CharmmContext.h  CharmmContext_new.h  CharmmContext_old.h  CharmmCrd.h  CharmmPSF.h  CharmmParameters.h  Checkpoint.h  CompositeSubscriber.h  Constraints.h  Coordinates.h  CudaBAOABIntegrator.h  CudaBondedForce.h  CudaContainer.h  CudaDirectForce_util.h  CudaDomdecRecip.h  CudaEMap.h  CudaEnergyVirial.h  CudaHolonoma.h  CudaHolonomicConstraint.h  CudaIntegrator.h  CudaIntegratorGraph.h  CudaLangevinPistonIntegrator.h  CudaLangevinThermostatIntegrator.h  CudaLeapFrogIntegrator.h  CudaMinimizer.h  CudaNeighborList.h  CudaNeighborListBuild.h  CudaNeighborListSort.h  CudaNeighborListStruct.h  CudaNoseHooverThermostatIntegrator.h  CudaOldLangevinPistonIntegrator.h  CudaP21NeighborList.h  CudaPMEDirectForce.h  CudaPMERecip.h  CudaPMEReciprocalForce.h  CudaPMEReciprocalGeneralForce.h  (+54 more)
include/include/: Bspline.h  (+54 more)
new_build/: CMakeCache.txt  CMakeDoxyfile.in  CTestTestfile.cmake  Makefile  cmake_install.cmake
python/: PSFgenerator.py  _setup.py  exportCharmmContext.cu  exportCharmmPSF.cu  exportCharmmParameters.cu  exportCoordinates.cu  exportForceManager.cu  exportForceManagerGenerator.cu  exportIntegrator.cu  exportPBC.cu  exportSubscriber.cu  metadata.py  pywrapper_main.cu  pywrappers.cu  util.py
python/python/: CMakeLists.txt  exportCharmmContext.cu  exportCharmmPSF.cu  exportCharmmParameters.cu  exportCoordinates.cu  exportForceManagerGenerator.cu  exportIntegrator.cu  exportPBC.cu  pywrapper_main.cu
src/: BEDSForceManager.cu  BEDSSubscriber.cu  Bspline.cu  CharmmContext.cu  CharmmContext_new.cu  CharmmContext_old.cu  CharmmCrd.cu  CharmmPSF.cu  CharmmParameters.cu  CharmmResidueTopology.cu  Checkpoint.cu  CheckpointSubscriber.cu  CompositeSubscriber.cu  ConstantPressurePostDrift.cu  Constraints.cu  Coordinates.cu  CudaBAOABIntegrator.cu  CudaBlock.cu  CudaBondedForce.cu  CudaContainer.cu  CudaDirectForceKernels.cu  CudaEMap.cu  CudaEnergyVirial.cu  CudaHolonoma.cu  CudaHolonomicConstraint.cu  CudaIntegrator.cu  CudaIntegratorGraph.cu  CudaLangevinPistonIntegrator.cu  CudaLangevinThermostatIntegrator.cu  CudaLeapFrogIntegrator.cu  CudaMinimizer.cu  CudaNeighborList.cu  CudaNeighborListBuild.cu  CudaNeighborListSort.cu  CudaNoseHooverThermostatIntegrator.cu  CudaOldLangevinPistonIntegrator.cu  CudaP21NeighborList.cu  CudaPMEDirectForce.cu  CudaPMERecip.cu  CudaPMEReciprocalForce.cu  (+47 more)
test/unittests/: CMakeLists.txt  compare.h  helper.h  unittest-CharmmContext.cpp  unittest-ForceManager.cpp  unittest-ForceManagerGenerator.cpp  unittest-Restart.cpp  unittest-Subscribers.cpp  unittest-alchemical.cpp  unittest-argon10.cpp  unittest-argon1000.cpp  unittest-benchmarks.cpp  unittest-benzenePyrrole.cpp  unittest-benzene_pyrrole.cpp  unittest-bridgeEDS.cpp  unittest-charmmContext.cpp  unittest-checkpoint.cpp  unittest-cudaContainer.cpp  unittest-cudaContainers.cpp  unittest-deviceVector.cpp  unittest-direct.cpp  unittest-eds.cpp  unittest-emap.cpp  unittest-eneForces.cpp  unittest-fep.cpp  unittest-forceManager.cpp  unittest-forceManager.cu  unittest-holonomic.cpp  unittest-insulin1.cpp  unittest-integrators.cpp  unittest-jac.cpp  unittest-langevinPiston.cpp  unittest-langevinThermostat.cpp  unittest-logger.cpp  unittest-main.cpp  unittest-minimize.cpp  unittest-mpid.cpp  unittest-noseHoover.cpp  unittest-p21.cpp  unittest-pme.cpp  (+12 more)
(+396 files in other folders)
